--- a/assests/css/_boilerplate.scss
+++ b/assests/css/_boilerplate.scss
@@ -1,3 +1,17 @@
+.scroll-animate{
+    text-align: center;
+    transition: 0.5s ease-in-out;
+    @include media-xl{
+        padding: 0px 0px 0px 0px;
+    }
+}
+
+// logo image placement
+.logo-section{
+    padding: 32px 0px 40px 0px;
+    text-align: center;
+}
+
 .active{
     padding: 16px 0px;
     border-bottom: 2px solid #F21D44; 
