--- a/assests/css/_boilerplate.scss
+++ b/assests/css/_boilerplate.scss
@@ -53,11 +53,18 @@
     border-radius: 2px;
     border:1px solid #000;
     background-color: #fff;
+    &:hover{
+        color: var(--primary-color);
+        border:1px solid var(--primary-color);
+    }
 }
 
 .popular-items{
     display: flex;
     justify-content: space-between;
+    a{
+        color: #000;
+    }
 }
 
 .swiper-button-disabled{
@@ -121,7 +128,6 @@
         left: 0;
         bottom: 0;
         width: 100%;
-        height: 100%;
         align-content: end;
         justify-items: start;
         display: grid;
@@ -130,7 +136,7 @@
         padding: 0px 24px 24px 24px;
         position: absolute;
         border-radius: 0px 0px 4px 4px;
-        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 70%);
+        background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,212,255,0) 100%);
         &--content{
             padding: 0px 12px 12px 12px;
         }
