--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -84,9 +84,16 @@ h2 {
   border: 1px solid #000;
   background-color: #fff; }
 
+.navigation-icons:hover {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color); }
+
 .popular-items {
   display: flex;
   justify-content: space-between; }
+
+.popular-items a {
+  color: #000; }
 
 .swiper-button-disabled {
   opacity: 0.2; }
@@ -142,7 +149,6 @@ h2 {
   left: 0;
   bottom: 0;
   width: 100%;
-  height: 100%;
   align-content: end;
   justify-items: start;
   display: grid;
@@ -151,7 +157,7 @@ h2 {
   padding: 0px 24px 24px 24px;
   position: absolute;
   border-radius: 0px 0px 4px 4px;
-  background: linear-gradient(0deg, black 0%, rgba(0, 212, 255, 0) 70%); }
+  background: linear-gradient(0deg, black 0%, rgba(0, 212, 255, 0) 100%); }
 
 .blog__details--content {
   padding: 0px 12px 12px 12px; }
