All issues resolved

--- a/assests/css/styles.scss
+++ b/assests/css/styles.scss
@@ -220,7 +220,7 @@ body{
         display: flex;
         flex-direction: column;
         position: fixed;
-        inset: 200px 0 0 0;
+        inset: 0 0 0 0;
         text-align: center;
         z-index: 100;
         background-color: rgba(255, 255, 255, 0.8);
@@ -230,7 +230,7 @@ body{
             display: flex;
             flex-direction: column;
             gap: 4rem;
-            padding-top: 55px;
+            padding-top: 185px;
         }
     }
 }
